Adding a regex example to the `Regex` parser

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -875,7 +875,7 @@ match p "Keyser oze"  -- []
 
 ---
 ## Parsing `Regex`
-
+.codeFloatRight[`[Kk]eyser.+[Ss]oze|[^abc].*ton`]
 ```
 regexChar :: Parser Regex
 regexChar   = Str <$> alphaNum
