Adding note in the 'How' part about the regex engine

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -98,6 +98,8 @@ layout: false
 
 - Serves an HTML page with the results
 
+- We'll build a toy regex engine
+
 - No Fibonacci!
 
 ???
@@ -111,7 +113,9 @@ layout: false
 - Filters out the tweets that do not match the regex expression
 - Produces an HTML page with the resulting tweets
 - The talk will be in two parts, first the more instructive one, where we'll implement some well known stuff on our own
+- Specifically, we'll write our own toy regex engine, this will be most of the talk
 - In the second part, where we actually setup our server, we'll be using any available library that fits our purposes
+- Despite the stereotypes, this is rather simple, so it won't take us much to implement
 ---
 class: center, middle, transition
 
