Tweaking the 'How' slide

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -87,18 +87,18 @@ layout: false
 ---
 
 ## How?
+
+- A toy regex engine
   
-`twitter-grep`, a small server that:
+- `twitter-grep`, a small server that:
 
-- Accepts GET (@twitter-name, regex)
+  * Accepts GET (@twitter-name, regex)
 
-- Fetches @twitter-name timeline
+  * Fetches @twitter-name timeline
 
-- Filters timeline with the regex expression
+  * Filters timeline with the regex expression
 
-- Serves an HTML page with the results
-
-- We'll build a toy regex engine
+  * Serves an HTML page with the results
 
 - No Fibonacci!
 
