Adding Github link

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1363,10 +1363,12 @@ When I said no Fibonacci, I lied...
 ## Resources
 
 The full code and presentation:
-TODO
 
+.center[https://github.com/ncreep/taste_of_haskell]
 
+.gap[]
 Further reading:
+
 - Learn You a Haskell ([free online book](http://learnyouahaskell.com/))
 
 - Real World Haskell ([free online book](http://book.realworldhaskell.org/read/))
