--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -342,27 +342,32 @@ trait Functor[F[_]] {
   def map[A, B](fa: F[A])(f: A => B): F[B]
 }
 
-implicit val optionFunctor = new Functor[Option] {
-  def map[A, B](opt: Option[A])(f: A => B) = opt map f
-}
 
+def addWorld[F[_]](fs: F[String])(implicit f: Functor[F]): F[String] = 
+  f.map(fs)(_ + " World!")
+
+
+  
+  
 {{content}}
 ```
 
 ???
 - First we define a trait with the `Functor` methods
 - In this case, mapping inside some container-like type
-- Next we create an instance of the typeclass for the `Option` type constructor
 - And now we can write a method that is generic in the `Functor` instance
---
 
-def addWorld[F[_]](fs: F[String])(implicit f: Functor[F]): F[String] = 
-  f.map(fs)(_ + " World!")
+--
+implicit val optionFunctor = new Functor[Option] {
+  def map[A, B](opt: Option[A])(f: A => B) = opt map f
+}
 
   
 addWorld(Option("Hello")) // Some(Hello World!)
 
 ???
+- Next we create an instance of the typeclass for the `Option` type constructor
+- And use it with the generic function
 - Typeclasses were actually invented for Haskell, and so it has special syntax for it
 - For example, the `Functor` typeclass is the defined as follows
 ---
@@ -370,6 +375,7 @@ addWorld(Option("Hello")) // Some(Hello World!)
 ```
 class Functor f where
   fmap :: (a -> b) -> f a -> f b
+  
   
 {{content}}
 ```
@@ -380,35 +386,34 @@ class Functor f where
 - Note that Haskell is inferring that `f` is a type constructor and not a simple type, it can be seen from the usage of `f` in `fmap`
 - The name of `fmap` is not `map` for historical reasons
 - This typeclass is part of the standard library
-- We can now make an instance of `Functor` for `Maybe` the Haskell equivalent of `Option`
---
-
-data Maybe a = Just a | Nothing deriving (Eq, Show)
-
-
-instance Functor Maybe where
-  fmap f (Just x) = Just $ f x
-  fmap _ Nothing = Nothing
-  
-{{content}}
-???
-- First the definition of `Maybe`, which is the same as the algebraic data types we've seen before, except that it has a type parameter
-- We just go by cases of `Maybe`, and apply `f` when it's possible
 - As in the Scala case, we can write a function that is generic in the typeclass instance
 --
-
 addWorld :: Functor f => f String -> f String 
 addWorld fs = fmap (++ " World!") fs
 
 
-addWorld $ Just "Hello" -- Just "Hello World!"
-
+{{content}}
 ???
 - The part before the thick arrow is the typeclass constraint
 - Which can be read as: given that there is an instance of `Functor` for `f`, do the following
 - When we specify the typeclass constraint it automatically brings the relevant methods into scope
 - So we have access to `fmap`, which is chosen by the compiler to be the right one 
 - Similar to how Scala's implicits work
+--
+data Maybe a = Just a | Nothing deriving (Eq, Show)
+
+
+instance Functor Maybe where
+  fmap f (Just x) = Just $ f x
+  fmap _ Nothing = Nothing
+
+
+addWorld $ Just "Hello" -- Just "Hello World!"
+
+???
+- We can now make an instance of `Functor` for `Maybe` the Haskell equivalent of `Option`
+- First the definition of `Maybe`, which is the same as the algebraic data types we've seen before, except that it has a type parameter
+- We just go by cases of `Maybe`, and apply `f` when it's possible
 - Let's do a slightly more complicated example
 - The `Applicative` typeclass, it's not that common in Scala, probably because the syntax does not work that well with it
 - But it is the typeclasses behind Scalaz's `Validation`
