--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1312,7 +1312,7 @@ main = scotty 3000 $ do
 - Our application is only slightly more complicated than this
 ---
 
-## `twitter-grep` Server
+## The `twitter-grep` Server
 
 ```
 main :: IO ()
